--- a/cisreg-GWAS_wf/parameters/tuberculosis.yaml
+++ b/cisreg-GWAS_wf/parameters/tuberculosis.yaml
@@ -27,7 +27,7 @@ GWAS_catalog:
    
 ## Regulatory sequence analysis tools
 RSAT:
-  rest: yes
+  rest: no
   rest.root: http://rsat-tagc.univ-mrs.fr/rsat/rest/
   varscan.pval: 0.0001
   varscan.pval.ratio: 100.0
